--- a/app.json
+++ b/app.json
@@ -1,28 +1,32 @@
 {
   "expo": {
-    "name": "simple-daily-budget",
+    "name": "Daily Budget",
     "slug": "simple-daily-budget",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
+      "backgroundColor": "#1a1a2e"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#1a1a2e"
+      },
+      "package": "com.dailybudget.app"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "plugins": [
+      "./plugins/withAndroidNotificationListener",
+      "expo-asset"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "a77ebbed-00e9-47e5-a379-10665aea5767"
+      }
     }
   }
 }
