--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "simple-daily-budget",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo": "~52.0.48",
-    "expo-asset": "~11.0.5",
-    "expo-dev-client": "~5.0.20",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-android-notification-listener": "^5.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+	"name": "simple-daily-budget",
+	"version": "1.0.0",
+	"main": "index.ts",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "1.23.1",
+		"expo": "~52.0.48",
+		"expo-asset": "~11.0.5",
+		"expo-dev-client": "~5.0.20",
+		"expo-status-bar": "~2.0.1",
+		"react": "18.3.1",
+		"react-native": "0.76.9",
+		"react-native-android-notification-listener": "^5.0.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "^18.3.27",
+		"@types/react-native": "^0.72.8",
+		"typescript": "^5.9.3"
+	},
+	"private": true
 }
