--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"expo-status-bar": "~2.0.1",
 		"react": "18.3.1",
 		"react-native": "0.76.9",
-		"react-native-android-notification-listener": "^5.0.1"
+		"react-native-android-notification-listener": "^5.0.1",
+		"react-native-android-widget": "^0.17.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/react": "^18.3.27",
-		"@types/react-native": "^0.72.8",
 		"typescript": "^5.9.3"
 	},
 	"private": true
